# gltf_preview

./: .gitignore  Cargo.toml  wasm-pack.ps1  wasm-pack.sh
assets/: AnimatedCube.glb  SimpleSkin.glb  albedo_shader.wgsl  main_shader.wgsl
mario_skurt/: index.html
src/: context.rs  lib.rs  main.rs  utils.rs
src/context/: camera.rs  depth_texture.rs  main_shader.wgsl  mod.rs  render_pipeline.rs  texture.rs  vertex.rs
src/context/asset_store/: mod.rs
src/context/render_pipeline/: albedo.rs  albedo_transparent.rs  mod.rs  texture.rs
src/context/shaders/: albedo_shader.wgsl  texture_shader.wgsl
src/input_manager/: Cargo.toml
src/input_manager/src/: game.rs  lib.rs
src/model/: load.rs  mod.rs  types.rs
src/render/: camera.rs  mod.rs  texture.rs  utils.rs
src/render/asset_store/: animation.rs  load.rs  material.rs  mesh.rs  mesh_tangent.rs  mod.rs  node_layout.rs  types.rs  utils.rs  world.rs
src/render/render_pipeline/: albedo.rs  albedo_transparent.rs  mod.rs  texture.rs
src/render/shaders/: kind.rs  mod.rs  texture_shader.wgsl
