[package]
name = "mario-skurt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = { version = "0.10" }
log = { version = "0.4" }
wgpu = { version = "0.16" }
winit = { version = "0.28" }

console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1.0.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
], optional = true }
pollster = { version = "0.3.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
gltf = { version = "1.2.0", features = ["extras", "names", "import"] }
glam = { version = "0.24.0", features = ["bytemuck"] }

[features]
wasm = [
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]


# Debugging
debug_gpu = []
debug_gltf = []
debug_window = []
debug_all = ["debug_gpu", "debug_gltf", "debug_window"]
