[package]
name = "input_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
ron = { version = "0.8.0" }
serde = { version = "1", features = ["derive"] }
web-sys = { version = "0.3", features = ["Storage"] }
winit = { version = "0.28", features = ["serde"] }
